--- a/client/src/styles/Forum.css
+++ b/client/src/styles/Forum.css
@@ -1,9 +1,17 @@
-.forumentry {
+.forumwrapper {
     max-width: 700px;
+    margin: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.forumentry {
+    max-width: 100%;
     border: 3px solid #9AD2F5;
     border-radius: 10px;
     padding: 1rem 2rem;
-    margin: 1rem auto;
+    /* margin: 1rem auto; */
+    margin-top: 1rem;
 }
 
 .forumentryheader {
@@ -60,6 +68,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 1rem;
 }
 
 .commentinput {
