small changes to styling

--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -11,6 +11,7 @@
 
 .logout {
     margin-top: 1rem;
+    margin-bottom: 3rem;
     padding: .5rem;
     background-color: #E59A9A;
     color: #751919;
