--- a/client/src/styles/Search.css
+++ b/client/src/styles/Search.css
@@ -5,7 +5,7 @@
 .search {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     /* align-items: center; */
     max-width: 500px;
     margin: auto;
