--- a/client/src/styles/Search.css
+++ b/client/src/styles/Search.css
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 .noresults {
