specified error handling rather than all redirects

--- a/client/src/styles/Balls.css
+++ b/client/src/styles/Balls.css
@@ -32,6 +32,10 @@
     border-radius: 16px;
 }
 
+.sprite {
+    max-width: 100px;
+}
+
 h3 {
     padding-top: .5rem;
     border-top: 2px solid #9AD2F5;
