--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -7,6 +7,7 @@ body {
 .contentwrapper {
     margin: auto;
     margin-top: 1rem;
+    margin-bottom: 2rem;
     max-width: 1200px;
     min-height: 60vh;
 }
@@ -19,6 +20,7 @@ body {
     max-width: 1200px;
     margin: auto;
     margin-top: 1rem;
+    margin-bottom: 2rem;
 }
 
 .innerbox {
@@ -109,4 +111,16 @@ body {
 .privacylink {
     margin-top: 1rem;
     margin-bottom: 1rem;
+}
+
+.error {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+    min-height: 60vh;
+}
+
+.cryingpikachu {
+    max-width: 500px;
 }
